--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,6 @@
         <p><a href="">Acerca de</a></p>
         <p><a href="">Colaboraciones Artísticas</a></p>
         <p><a href="">Tesina: Sizigia</a></p>
-        <p><a href="">Laboratorio</a></p>
         <p><a href="">Docencia e Investigación</a></p>
 
       </header>
@@ -35,9 +34,9 @@
 
       </section>
       <footer>
-        <p><a href="mailto:matias.jl@gmail.com">mail</a></p>
-        <p><a href="https://t.me/redtek">telegram</a></p>
-        <p><a href="{{ site.github.owner_url }}">github</a></p>
+        <p><a href="mailto:matias.jl@gmail.com">mail</a></br>
+        <a href="https://t.me/redtek">telegram</a></br>
+        <a href="{{ site.github.owner_url }}">github</a></p>
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
