--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,10 +22,10 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
         
-        <p><a href="">Acerca de</a></p>
-        <p><a href="">Colaboraciones Artísticas</a></p>
-        <p><a href="">Tesina: Sizigia</a></p>
-        <p><a href="">Docencia e Investigación</a></p>
+        <p><a href="https://matiasjl.github.io/portfolio">Acerca de</a></p>
+        <p><a href="https://matiasjl.github.io/portfolio/colaborations.html">Colaboraciones Artísticas</a></p>
+        <p><a href="https://matiasjl.github.io/portfolio/fiestesis.html">Tesina: Sizigia</a></p>
+        <p><a href="https://matiasjl.github.io/portfolio/academia.html">Docencia e Investigación</a></p>
 
       </header>
       <section>
