--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
         
         <p><a href="https://matiasjl.github.io/portfolio">Acerca de</a></p>
         <p><a href="https://matiasjl.github.io/portfolio/colaborations.html">Colaboraciones Artísticas</a></p>
-        <p><a href="https://matiasjl.github.io/portfolio/fiestesis.html">Tesina: Sizigia</a></p>
+        <p><a href="https://matiasjl.github.io/portfolio/fiestesis.html">Sizigia (Tesina de grado)</a></p>
         <p><a href="https://matiasjl.github.io/portfolio/academia.html">Docencia e Investigación</a></p>
 
       </header>
