--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
         
-        <p><a href="https://matiasjl.github.io/portfolio">Acerca de</a></p>
+        <p><a href="https://matiasjl.github.io/portfolio">Matias Jauregui Lorda</a></p>
         <p><a href="https://matiasjl.github.io/portfolio/colaborations.html">Colaboraciones Artísticas</a></p>
         <p><a href="https://matiasjl.github.io/portfolio/fiestesis.html">Sizigia (Tesina de grado)</a></p>
         <p><a href="https://matiasjl.github.io/portfolio/academia.html">Docencia e Investigación</a></p>
