--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,8 +34,8 @@
 
       </section>
       <footer>
-        <p><a href="mailto:matias.jl@gmail.com">mail</a></br>
-        <a href="https://t.me/redtek">telegram</a></br>
+        <p><a href="mailto:matias.jl@gmail.com">mail</a> | 
+        <a href="https://t.me/redtek">telegram</a> | 
         <a href="{{ site.github.owner_url }}">github</a></p>
       </footer>
     </div>
