--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
         <p><a href="https://matiasjl.github.io/portfolio/academia.html">Docencia e Investigación</a></p>
 
       </header>
-      <section>
+      <section id="contenido">
 
       {{ content }}
 
