--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,9 +15,11 @@ h2, h3{
 }
 a{
   color: lightgrey;
-  font-weight: bold;
 }
 a:hover {
   background-color: red;
   color: black;
+}
+#contenido a{
+  font-weight: bold;
 }
