--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -26,3 +26,11 @@ a:hover {
 .imgColaboraciones{
   height: 100px;
 }
+.imgColaboraciones img{
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
+  right: -9999px;
+  bottom: -9999px;
+  margin: auto;
+}
