--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -26,6 +26,4 @@ a:hover {
 .imgColaboraciones{
   height: 70px;
 }
-.imgColaboraciones img{
-  object-fit: cover;
-}
+.object-fit_cover { object-fit: cover }
