--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -26,4 +26,7 @@ a:hover {
 .imgColaboraciones{
   height: 70px;
 }
-.object-fit_cover { object-fit: cover }
+.object-fit_cover { 
+  height: 70px;
+  object-fit: cover;
+}
