--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,7 +7,7 @@ body{
   background-color: black;
   color: white;
 }
-h1{
+h1{cover
   color: white;
 }
 h2, h3{
@@ -25,5 +25,5 @@ a:hover {
 }
 .imgColaboraciones{
   height: 70px;
-  object-fit: cover;
+  object-fit: contain;
 }
