--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,6 +20,10 @@ a:hover {
   background-color: red;
   color: black;
 }
+a:active {
+  background-color: red;
+  color: black;
+}
 #contenido a{
   font-weight: bold;
 }
