--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,11 +4,11 @@
 @import "{{ site.theme }}";
 
 body{
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: black;
 }
 h1{
-  //color: white;
+  color: white;
   background-color: red;
   color: black;
 }
@@ -23,6 +23,14 @@ a:hover {
   color: black;
 }
 a:active {
+  background-color: red;
+  color: black;
+}
+#contenido{
+  background-color: black;
+  color: white;
+}
+#contenido h1{
   background-color: red;
   color: black;
 }
