--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,9 +23,9 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
         
         <!--<p><a href="https://matiasjl.github.io/portfolio">Matias Jauregui Lorda</a></p>-->
-        <p><a href="https://matiasjl.github.io/portfolio/colaboraciones.html">Colaboraciones Artísticas</a></p>
-        <p><a href="https://matiasjl.github.io/portfolio/fiestesis.html">Sizigia (Tesina de grado)</a></p>
-        <p><a href="https://matiasjl.github.io/portfolio/academia.html">Docencia e Investigación</a></p>
+        <p><a href="https://matiasjl.github.io/colaboraciones.html">Colaboraciones Artísticas</a></p>
+        <p><a href="https://matiasjl.github.io/fiestesis.html">Sizigia (Tesina de grado)</a></p>
+        <p><a href="https://matiasjl.github.io/academia.html">Docencia e Investigación</a></p>
 
       </header>
       <section id="contenido">
