--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,14 +14,14 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
-        
+        <h1 class="jl-title"><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
-        
+
         <!--<p><a href="https://matiasjl.github.io/portfolio">Matias Jauregui Lorda</a></p>-->
         <p><a href="https://matiasjl.github.io/colaboraciones.html">Colaboraciones Artísticas</a></p>
         <p><a href="https://matiasjl.github.io/fiestesis.html">Sizigia (Tesina de grado)</a></p>
@@ -34,8 +34,8 @@
 
       </section>
       <footer>
-        <p><a href="mailto:matias.jl@gmail.com">mail</a> | 
-        <a href="https://t.me/redtek">telegram</a> | 
+        <p><a href="mailto:matias.jl@gmail.com">mail</a> |
+        <a href="https://t.me/redtek">telegram</a> |
         <a href="{{ site.github.owner_url }}">github</a></p>
       </footer>
     </div>
