--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,9 +20,9 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
+        <!-- <p>{{ site.description | default: site.github.project_tagline }}</p> -->
 
-        <!--<p><a href="https://matiasjl.github.io/portfolio">Matias Jauregui Lorda</a></p>-->
+        <p><a href="https://matiasjl.github.io/">Matias Jauregui Lorda</a></p>
         <p><a href="https://matiasjl.github.io/colaboraciones.html">Colaboraciones Artísticas</a></p>
         <p><a href="https://matiasjl.github.io/fiestesis.html">Sizigia (Tesina de grado)</a></p>
         <p><a href="https://matiasjl.github.io/academia.html">Docencia e Investigación</a></p>
