--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,13 +14,14 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="jl-title"><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <!-- <h1 class="jl-title"><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1> -->
 
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
         <!-- <p>{{ site.description | default: site.github.project_tagline }}</p> -->
+        <br>
 
         <p><a href="https://matiasjl.github.io/">Matias Jauregui Lorda</a></p>
         <p><a href="https://matiasjl.github.io/colaboraciones.html">Colaboraciones Artísticas</a></p>
