--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -49,6 +49,6 @@ a:active {
   object-fit: cover;
 }
 .jl-title{
-  font-size: 100px;
-  font-family: sans-serif;
+  //font-size: 100px;
+  //font-family: sans-serif;
 }
