--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,9 +21,9 @@
         {% endif %}
 
         <!-- <p>{{ site.description | default: site.github.project_tagline }}</p> -->
-        <br>
+        <p><a href="https://matiasjl.github.io/">{{ site.description | default: site.github.project_tagline }}</a></p>
 
-        <p><a href="https://matiasjl.github.io/">Matias Jauregui Lorda</a></p>
+        <!-- <p><a href="https://matiasjl.github.io/">Matias Jauregui Lorda</a></p> -->
         <p><a href="https://matiasjl.github.io/colaboraciones.html">Colaboraciones Artísticas</a></p>
         <p><a href="https://matiasjl.github.io/fiestesis.html">Sizigia (Tesina de grado)</a></p>
         <p><a href="https://matiasjl.github.io/academia.html">Docencia e Investigación</a></p>
